--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   },
   "author": "",
   "dependencies": {
+    "babel-core": "^5.8.20",
+    "babel-loader": "^5.3.2",
     "chalk": "^1.1.0",
     "css-loader": "^0.15.6",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "react": "^0.13.3",
+    "react-hot-loader": "^1.2.8",
     "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.6",
     "style-loader": "^0.12.3",
-    "webpack": "^1.10.5",
-    "babel-core": "^5.8.20",
-    "babel-loader": "^5.3.2",
-    "react-hot-loader": "^1.2.8"
+    "webpack": "^1.10.5"
   },
   "license": "ISC"
 }
